@startuml

skinparam monochrome true
skinparam defaultFontName "Times New Roman"
skinparam classAttributeIconSize 0
skinparam shadowing false

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}

skinparam classFontName "Times New Roman"
skinparam classAttributeFontName "Times New Roman"
skinparam classStereotypeFontName "Times New Roman"

class News {
    - id: Long
    - title: String
    - url: String
    - link: String
    - publishDate: String
    - createdAt: LocalDateTime
    + onCreate(): void
    + getters/setters()
}

class NewsFragment {
    - swipeRefreshLayout: SwipeRefreshLayout
    - newsRecyclerView: RecyclerView
    - newsAdapter: NewsAdapter
    + onCreateView(...): View
    + onViewCreated(...): void
    - loadNews(): void
    - refreshNews(): void
    - showError(String): void
}

class NewsAdapter {
    - newsList: List<News>
    + onCreateViewHolder(...): NewsViewHolder
    + onBindViewHolder(...): void
    + getItemCount(): int
    + updateNews(List<News>): void
}

class NewsController {
    - newsService: NewsService
    + getLatestNews(): ResponseEntity<List<News>>
    + refreshNews(): ResponseEntity<Void>
}

interface NewsService {
    + getLatestNews(): List<News>
    + refreshNews(): void
}

class NewsServiceImpl {
    - newsRepository: NewsRepository
    - objectMapper: ObjectMapper
    - PYTHON_SCRIPT_PATH: String
    + getLatestNews(): List<News>
    + refreshNews(): void
}

interface NewsRepository {
    + findLatestNews(): List<News>
}

class NewsCrawler {
    + crawl_psychology_news(): List<Map>
}

NewsFragment --> NewsAdapter : uses
NewsAdapter --> News : displays
NewsController --> NewsService : uses
NewsService <|.. NewsServiceImpl : implements
NewsServiceImpl --> NewsRepository : uses
NewsServiceImpl --> NewsCrawler : executes
NewsRepository --> News : manages

@enduml 